    /etc/modprobe.d/nvidia-options.conf as a template taking into account the
    module renaming. This is a slave alternative of the nvidia alternative
    (470.86-1).  (Closes: #999670)
  * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
    kernels, not supported upstream (510.54-1).
  * Declare Testsuite: autopkgtest-pkg-dkms (510.54-1).
  * Update lintian overrides.
  * Bump Standards-Version to 4.6.0. No changes needed.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 13 Apr 2022 17:51:34 +0200

nvidia-graphics-drivers (418.226.00-2) UNRELEASED; urgency=medium

  * Backport stdarg.h and stddef.h changes from 495.44 to fix kernel module
    build for Linux 5.16.
  * Backport pde_data changes from 470.103.01 to fix kernel module build for
    Linux 5.17.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 25 Feb 2022 13:48:18 +0100

nvidia-graphics-drivers (418.226.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 418.226.00 (2021-10-26).

 -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Nov 2021 10:57:00 +0100

nvidia-graphics-drivers (418.211.00-2) UNRELEASED; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Sep 2021 00:40:47 +0200

nvidia-graphics-drivers (418.211.00-1) buster; urgency=medium

  * New upstream Tesla release 418.211.00 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.  (Closes: #991351)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211

  [ Andreas Beckmann ]
  * Refresh patches.
  * nvidia-driver-libs: Add Recommends: libnvidia-encode1
    (460.91.03-1).  (Closes: #989885)
  * debian/gen-control.pl: Support substitutions in the Vcs-Git field
    (460.91.03-1).
  * Compute and substitute the Git branch instead of hardcoding it
    (460.91.03-1).
  * Upload to buster.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 22:06:09 +0200
